Added files via upload

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-Hello I am here
-come back soon
+<html>
+<head>
+	<title></title>
+</head>
+<body>	
+<center>
+<img src="logo.png">
+<h1>Hello World.</h1>
+<h3> I am an Advertiser</h3>
 
+</center>
+</body>
+</html>
