--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-	<title></title>
-</head>
-<body>	
-<center>
-<img src="logo.png">
-<h1>Hello World.</h1>
-<h3> I am an Advertiser</h3>
+<title>Design Fox</title>
+</head> 
 
-</center>
-</body>
-</html>
+
+<img src="logo.jpg" width 
+
+<body>
+<h1>WELCOME TO DESIGN FOX</h1>
+<br</
+<h2>Design Fox is dedicated to showcase and explore the talents of Artists like you!.</h2>
+ <h2>Design Fox is where aspiration meets attainable, where storytelling meets reality, and where inspiration meets action. By delivering influential content supported by expert voices and behind-the-scenes access, we aim to quell your curiosity and propel your personal evolution.</h2>
+<body/>
