Added files via upload

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <head>
-<title>Design Fox</title>
+<title>Create Fox</title>
 </head> 
 
 
 <img src="logo.jpg" width 
 
 <body>
-<h1>WELCOME TO DESIGN FOX</h1>
+<h1>WELCOME TO CREATE FOX</h1>
 <br</
-<h2>Design Fox is dedicated to showcase and explore the talents of Artists like you!.</h2>
- <h2>Design Fox is where aspiration meets attainable, where storytelling meets reality, and where inspiration meets action. By delivering influential content supported by expert voices and behind-the-scenes access, we aim to quell your curiosity and propel your personal evolution.</h2>
+<h2>Create Fox is dedicated to showcase and explore the talents of Artists like you!.</h2>
+ <h2>Create Fox is where aspiration meets attainable, where storytelling meets reality, and where inspiration meets action. By delivering influential content supported by expert voices and behind-the-scenes access, we aim to quell your curiosity and propel your personal evolution.</h2>
 <body/>
 
