--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<title>About Me</title>
 Create Fox is where aspiration meets attainable, where storytelling meets reality, and where inspiration meets action. 
 By delivering influential content supported by expert voices and behind-the-scenes access, we aim to quell your curiosity and propel 
 your personal evolution.Create Fox was created by Robert Rodriguez; a s adesigner, he wanted to colaborate with others artists in a spontaneous
