--- a/about.html
+++ b/about.html
@@ -1,5 +1,8 @@
 <title>About Me</title>
+<center>
+<img src="logo.jpg">
 Create Fox is where aspiration meets attainable, where storytelling meets reality, and where inspiration meets action. 
 By delivering influential content supported by expert voices and behind-the-scenes access, we aim to quell your curiosity and propel 
 your personal evolution.Create Fox was created by Robert Rodriguez; a s adesigner, he wanted to colaborate with others artists in a spontaneous
 way.
+</center>
